# recalium

./: .dockerignore  .env.sample  .gitignore  .mcp.json  AGENTS.md  CLAUDE.md  CODEX.md  GEMINI.md  LICENSE  Makefile  README.md  docker-compose.override.yml  docker-compose.yml  opencode.json
.claude/: settings.json
.cursor/: mcp.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
agents/: core.instructions.md  project.instructions.md  python.instructions.md  sync-agents.py  tdd.instructions.md
backend/: .env.sample  Dockerfile  alembic.ini  dev-entrypoint.sh  entrypoint.sh  pyproject.toml
backend/alembic/versions/: 0002_derived_memory.py
backend/app/: main.py
backend/app/api/: __init__.py
backend/app/api/routes/: __init__.py  archive.py  audit.py  backup.py  canonical.py  facts.py  health.py  import_.py  ingest.py  jobs.py  portability.py  review_queue.py  search.py  settings.py  status.py  tags.py  telemetry.py
backend/app/domain/: conflict_detection.py
backend/app/domain/archive/: __init__.py  models.py  service.py  tombstones.py
backend/app/domain/audit/: models.py  service.py
backend/app/domain/backup/: __init__.py  service.py
backend/app/domain/canonical_memory/: __init__.py  models.py  service.py
backend/app/domain/derived_memory/: __init__.py  models.py  service.py
backend/app/domain/imports/: __init__.py  adapters.py  service.py
backend/app/domain/ingest/: __init__.py  parsers.py  service.py  watcher.py
backend/app/domain/jobs/: __init__.py  models.py  service.py
backend/app/domain/policy/: __init__.py  gate.py  resolver.py
backend/app/domain/retrieval/: __init__.py  service.py
backend/app/domain/review_queue/: __init__.py  models.py  service.py
backend/app/domain/settings/: __init__.py  models.py  service.py
backend/app/domain/telemetry/: models.py  service.py
backend/app/infrastructure/: db.py  settings.py
backend/app/mcp_server/: __init__.py  server.py
backend/app/worker/: __init__.py  dispatcher.py  loop.py
backend/migrations/: env.py
backend/migrations/versions/: 0001_initial.py  0002_derived_memory.py  0003_canonical_memory.py  0004_telemetry_audit_verbose.py  0005_links_and_tags.py  0006_fact_review_status.py  0007_tombstones.py  0008_facts_fts.py
backend/tests/: conftest.py  test_archive.py  test_ingest.py  test_settings.py
backend/tests/api/: test_archive_delete.py  test_auth_middleware.py  test_canonical_api.py  test_facts_api.py  test_reprocess.py  test_review_queue_api.py  test_search_api.py  test_spa_fallback.py  test_tags_api.py
backend/tests/domain/: test_backup_service.py  test_canonical_memory.py  test_conflict_detection.py  test_deletion_cascade.py  test_deletion_concurrency.py  test_deletion_tombstones.py  test_derived_memory.py  test_imports.py  test_jobs_service.py  test_policy_gate.py  test_policy_resolver.py  test_retrieval.py  test_review_curation.py  test_review_queue.py  test_telemetry_service.py
backend/tests/e2e/: __init__.py  conftest.py  test_live_stack.py
backend/tests/integration/: test_backup_restore_safety.py  test_phase3_integration.py  test_phase4_integration.py  test_phase5_integration.py  test_retrieval_filters.py
backend/tests/mcp/: test_mcp_server.py
backend/tests/worker/: test_dispatcher.py  test_loop.py  test_policy_egress_gate.py
docs/: recommendations.md  (+4 more)
(+331 files in other folders)
