[project]
name = "recalium"
version = "0.1.0"
description = "Local-first MCP-native personal memory platform"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi==0.135.1",
    "uvicorn[standard]==0.42.0",
    # Database
    "sqlalchemy==2.0.48",
    "asyncpg==0.31.0",
    "alembic==1.18.4",
    # Validation & settings
    "pydantic==2.12.5",
    "pydantic-settings>=2.0,<3",
    # HTTP client (async — never use requests)
    "httpx==0.28.1",
    # MCP SDK (pin <2 — v2 has breaking transport changes)
    "mcp>=1.26,<2",
    # pgvector Python client (enables Vector column type in ORM)
    "pgvector==0.4.2",
    # LRU + TTL cache for retrieval service
    "cachetools>=5.0,<6",
    # BYOK providers
    "openai>=1.0,<2",
    "anthropic>=0.20,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio==1.3.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.0",
]
# Local embedding model (sentence-transformers).
# Install the right torch variant to control image size:
#   uv pip install "recalium[local-ml-cpu]"   → CPU-only torch (~1.5 GB image delta)
#   uv pip install "recalium[local-ml-gpu]"   → CUDA torch    (~4 GB image delta)
# Omit both to use only external providers (OpenAI / Anthropic / Ollama).
local-ml-cpu = [
    "torch>=2.0,<3 ; extra == 'local-ml-cpu'",
    "sentence-transformers==5.3.0",
]
local-ml-gpu = [
    "torch>=2.0,<3 ; extra == 'local-ml-gpu'",
    "sentence-transformers==5.3.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.0,<9",
    "pytest-asyncio==1.3.0",
    "httpx>=0.28",
    "ruff>=0.9",
    "mypy>=1.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
